Added worker.js
